apps/api-gateway/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  template:    
    spec:
      containers:
      - name: api-gateway
