apps/api-gateway/overlays/dev/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: api-gateway
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
